[package]
name = "mintex"
version = "0.1.0"
description = "minimal mutex"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/garypen/mintex"
readme = "README.md"
keywords = ["mutex", "spinlock"]
categories = ["concurrency"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
sys-info = "0.9.1"
